# naniGPT

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/specs/distributed/: overview.md  tensor-parallelism.md
journal/: 2026-02-21-fault-tolerance-goodput-model.py  2026-02-21-fault-tolerance.md  2026-03-25-fault-tolerance-design.md
journal/config_system/: 2026-02-20-config-system-research.md  2026-02-24-config-design.md
journal/ft/: 2026-02-21-fault-tolerance-goodput-model.py  2026-02-21-fault-tolerance.md  2026-03-25-fault-tolerance-design.md
journal/parallelisms/: 2026-02-24-parallelism-strategies.md  2026-02-25-cost-model-design.md  2026-02-26-pipeline-parallelism-implementation.md  2026-03-18-porting-megatron-optimizations-to-dtensor.md  2026-03-26-parallelism-architecture-design.md  2026-03-27-predict-measure-explain.md  2026-03-30-extending-the-parallelism-architecture.md
journal/specs/: 2026-03-30-introducing-specs.md
nanigpt/: config.py  configurable.py  env.py  launcher.py  train.py
nanigpt/configs/: registry.py
nanigpt/data/: prepare.py  synthetic.py  tokenized.py
nanigpt/distributed/: __init__.py  comm.py  data_parallel.py  mesh.py  plan.py  process_group.py  registry.py  sharding.py  spmd.py  tensor_parallel.py
nanigpt/microbenchmarks/: hardware.py
nanigpt/models/: dense_transformer.py
nanigpt/profiling/: context.py  event_types.py  flop_counter.py  perfetto.py  timer.py  torch_profiler.py  trace_analysis.py
tests/: conftest.py  distributed_utils.py  test_comm.py  test_context.py  test_flop_counter.py  test_prepare.py  test_registry.py  test_sharding.py  test_spmd.py  test_step_metrics.py  test_tensor_parallel.py  test_tokenized_dataset.py  test_torch_profiler.py
(+3 files in other folders)
