[project]
name = "nanigpt"
version = "0.1.0"
description = "Exploration of frontier training framework design"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "numpy",
    "tiktoken",
    "torch>=2.10",
    "triton>=3.6",
    "wandb",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
